message MessageList {
    optional ChatConversationList chatList = 1;
    optional EmailList emailList           = 2;
    optional GroupChatList groupList       = 3;
}

message ChatConversationList {
    repeated ChatConversation conversation = 1;
}

message ChatConversation {
    repeated ChatMessage chatMessage = 1;
    required string conversationID   = 2;
    required string theirName        = 3;
    required string theirAddress     = 4;
    required string myAddress        = 5;
}

message ChatMessage {
    required bool sentFromMe       = 1;
    required string name           = 2;
    required string content        = 3;
    required uint64 timestamp      = 4;

}

message EmailList {
    repeated EmailMessage emailMessage = 1;
}

message EmailMessage {
    required bool sentFromMe    = 1;
    required string toAddress   = 2;
    required string fromAddress = 3;
    required string senderName  = 4;
    required string body        = 5;
    required string subject     = 6;
    required uint64 timestamp   = 7;
}

message GroupChatList{
    repeated GroupChat chat = 1;
}

message GroupChat {
    required ChatRoom chatRoom            = 1;
    repeated RoomMessage chatRoomMessages = 2;
}

message ChatRoom{
    required string roomName      = 1;
    optional bytes roomPrivateKey = 2;
    optional bytes roomPublicKey  = 3;
    required string timeOfLastGET = 4;
}

message RoomMessage{

}