message SignedPayload {
	required bytes serializedMessageData = 1;
	required bytes HMacOrSig             = 2;
}

message MessageData {
	required string senderAddress      = 1;
	required MessageType messageType   = 2;
	required uint64 timeStamp          = 3;
	optional string subject            = 4;
	required string UnencryptedMessage = 5;
	required string name               = 6;
}

enum MessageType {
	CHAT     = 1;
	EMAIL    = 2;
	CHATROOM = 3;
}
